--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,10 @@
 }
 
 .main-menu li{
-  border: 1px solid #bebebe;
+  border: 1px solid #fff;
   padding: 10px;
-  width: 10em;
+  width: 8em;
+  font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
 }
 
 .home-icon{
