--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 .main-menu li{
-  padding: 10px;
+  padding: 5px;
   width: 8em;
   font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
 }
@@ -14,5 +14,40 @@
 }
 
 .btn-light {
-  width: 8em;
+  width: 10em;
+  font-color: #fff;
+}
+
+.flex-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-nav{
+  display: flex;
+  flex-wrap: wrap;
+  height: 500px
+}
+
+.flex-box1{
+  flex: 1;
+  background-color: #279afa;
+}
+
+
+.flex-box2{
+  flex: 1;
+  background-color: #89da74;
+}
+
+
+.flex-box3{
+  flex: 1;
+  background-color: #3fd77f;
+}
+
+
+.flex-box4{
+  flex: 1;
+  background-color: #75e465;
 }
