--- a/styles.css
+++ b/styles.css
@@ -21,33 +21,43 @@
 .flex-container{
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .flex-nav{
   display: flex;
   flex-wrap: wrap;
-  height: 500px
+  height: 500px;
+  flex-direction: row;
 }
 
 .flex-box1{
+  display: flex;
   flex: 1;
   background-color: #279afa;
+  flex-basis: calc(50% - 40px);
 }
 
 
 .flex-box2{
+  display: flex;
   flex: 1;
   background-color: #89da74;
+  flex-basis: calc(50% - 40px);
 }
 
 
 .flex-box3{
+  display: flex;
   flex: 1;
   background-color: #3fd77f;
+  flex-basis: calc(50% - 40px);
 }
 
 
 .flex-box4{
+  display: flex;
   flex: 1;
   background-color: #75e465;
+  flex-basis: calc(50% - 40px);
 }
