--- a/styles.css
+++ b/styles.css
@@ -27,37 +27,41 @@
 .flex-nav{
   display: flex;
   flex-wrap: wrap;
-  height: 500px;
+  height: 300px;
   flex-direction: row;
+}
+
+.flex-des{
+  display: flex;
 }
 
 .flex-box1{
   display: flex;
   flex: 1;
+  width: 500px;
   background-color: #279afa;
-  flex-basis: calc(50% - 40px);
 }
 
 
 .flex-box2{
   display: flex;
   flex: 1;
+  width: 500px;
   background-color: #89da74;
-  flex-basis: calc(50% - 40px);
 }
 
 
 .flex-box3{
   display: flex;
   flex: 1;
+  width: 500px;
   background-color: #3fd77f;
-  flex-basis: calc(50% - 40px);
 }
 
 
 .flex-box4{
   display: flex;
   flex: 1;
+  width: 500px;
   background-color: #75e465;
-  flex-basis: calc(50% - 40px);
 }
