--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@
   flex: 1;
   width: 500px;
   background-color: #279afa;
+  flex-basis: calc(50% - 20px);
 }
 
 
@@ -49,6 +50,7 @@
   flex: 1;
   width: 500px;
   background-color: #89da74;
+  flex-basis: calc(50% - 20px);
 }
 
 
@@ -57,6 +59,7 @@
   flex: 1;
   width: 500px;
   background-color: #3fd77f;
+  flex-basis: calc(50% - 20px);
 }
 
 
@@ -65,4 +68,5 @@
   flex: 1;
   width: 500px;
   background-color: #75e465;
+  flex-basis: calc(50% - 20px);
 }
