--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body{
   flex-direction: row;
   flex: 50%;
   max-width: 50%;
+  height: 100%;
 }
 
 .flex-des{
@@ -45,6 +46,7 @@ body{
   flex: 50%;
   flex-direction: column;
   max-width: 50%;
+  height: 100%;
 }
 
 .flex-box1{
