--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body{
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  max-height: 80%;
 }
 
 .flex-nav{
