--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;  
@@ -31,7 +31,7 @@ body{
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  max-height: 50%;
+  max-height: 100vh;
 }
 
 .flex-nav{
