--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body{
   flex: 1;
   width: 500px;
   background-color: #279afa;
-  flex-basis: calc(50% - 10px);
+  flex-basis: 50%;
 }
 
 
@@ -64,7 +64,7 @@ body{
   flex: 1;
   width: 500px;
   background-color: #89da74;
-  flex-basis: calc(50% - 10px);
+  flex-basis: 50%;
 }
 
 
@@ -73,7 +73,7 @@ body{
   flex: 1;
   width: 500px;
   background-color: #3fd77f;
-  flex-basis: calc(50% - 10px);
+  flex-basis: 50%;
 }
 
 
@@ -82,5 +82,5 @@ body{
   flex: 1;
   width: 500px;
   background-color: #75e465;
-  flex-basis: calc(50% - 10px);
+  flex-basis: 50%;
 }
