--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body{
   flex-direction: row;
   flex: 50%;
   max-width: 50%;
+  padding: 0px 10px 10px 0px;
 }
 
 .flex-des{
@@ -48,6 +49,7 @@ body{
   flex: 50%;
   flex-direction: column;
   max-width: 50%;
+  padding: 0px 10px 10px 0px;
 }
 
 .flex-box1{
