--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-body{
+html,body{
 	margin: 0px;
-	background-color: #edffc3;
+	height:100%;
 }
 
 .main{
@@ -10,20 +10,30 @@ body{
 }
 
 .sub{
-	height: 100vh;
+	height: 100%;
 	margin: 0px;
+	display: flex;
+}
+
+.side-bar{
+	height: 100%;
+	background-color: #20B2AA;
+	width: 30%;
 }
 
 .main-menu{
   list-style: none;
-  text-align: center;
-  background-color: #cfffc3;
   margin-top:0px;
-  height: 11vh;
+  display: table;
+  text-align: center;
 }
 
-.active{
+.active {
   background-color: #fff;
+}
+
+.active a{
+  color: #000 !important;
 }
 
 .home{
@@ -33,16 +43,20 @@ body{
 }
 
 .main-menu li:not(:first-child){
-  padding: 5px;
-  width: 12em;
-  font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+  padding: 10px;
+  width: 100%;
   display: inline-block;
 }
 
 .main-menu a{
 	text-decoration: none;
-	width: 100%;
-	display:block;
+	height: 15vh;
+	vertical-align: middle;
+	display: table-cell;
+	color: #fff;
+	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+	font-size: 20px;
+	font-weight:bold;
 }
 
 .home-icon{
@@ -120,25 +134,30 @@ div.all-box a {
   background-image: url("https://action.audubon.org/sites/default/files/sfw_APA_2013_28342_232388_BrianKushner_Blue_Jay_KK_900x9_1.jpg");
 }
 
-.intro{
+.text{
 	font-size: 16px;
 	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
 	color: #8d8d8d;
+	line-height: 30px;
 }
 
 div.flex-des h1{
 	color: #bebebe;
 	font-size: 60px;
+	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+}
+
+h1{
+	font-size: 50px;
+	color: #909090;
+	font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
 }
 
 div.main-body {
-	background-color: #fff;
-	width: 50%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	border: 1px solid #bebebe;
 	padding: 10px;
+	flex: 95%;
+	flex-wrap: wrap;
+	overflow-y: scroll;
 }
 
 img.header{
@@ -171,16 +190,12 @@ th, td{
 	padding: 10px;
 }
 
-th{
-	background-color: #ffc3ed;
-}
-
 table tr{
-	background-color: #d5c3ff;
+	background-color: #20b261;
 }
 
 table tr:nth-child(odd){
-	background-color: #e3ffdd;
+	background-color: #2071b2;
 }
 
 .good-birds{
